tests/invalids/invalidWriteTab.gt
proc main ()
    int m;
begin
    write "asdf\t";
end
